# todo-cli

./: .gitignore  .pre-commit-config.yaml  README.md  mytodo.json  pyproject.toml  pytest.ini  todo.json  todo.py
.github/workflows/: ci.yml
.tmp/: smoke.json
.tmp/pytest_7a12bb3b17154291aa8832f5523b175a/: test_add_and_listcurrent  test_done_marks_itemcurrent  test_list_items_outputs_jsoncurrent  test_list_items_reports_emptycurrent  test_remove_deletes_itemcurrent
.tmp/pytest_7ba5cc73df9741e8b910b683fca64b81/: test_add_and_listcurrent  test_done_marks_itemcurrent  test_list_items_outputs_jsoncurrent  test_list_items_reports_emptycurrent  test_remove_deletes_itemcurrent
.tmp/pytest_8357925a3e77490399ead19ae1a88417/: test_add_and_listcurrent  test_done_marks_itemcurrent  test_edit_changes_titlecurrent  test_edit_invalid_index_raisescurrent  test_list_items_outputs_jsoncurrent  test_list_items_reports_emptycurrent  test_remove_deletes_itemcurrent
.tmp/pytest_8df0d2aaa9a64bf9a119bb399e8e07b4/: test_add_and_listcurrent  test_done_marks_itemcurrent  test_list_items_outputs_jsoncurrent  test_list_items_reports_emptycurrent  test_remove_deletes_itemcurrent
.tmp/pytest_eaba5fec207e4746b0d638edeeb9531d/: test_add_and_listcurrent  test_done_marks_itemcurrent  test_edit_changes_titlecurrent  test_edit_empty_title_raisescurrent  test_edit_invalid_index_raisescurrent  test_list_items_outputs_jsoncurrent  test_list_items_reports_emptycurrent  test_remove_deletes_itemcurrent
tests/: conftest.py  test_todo.py
tmp/test_edit_empty_title_raises0/: todo.json
(+11 files in other folders)
